[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[project]
name = "glhmm"
authors = [{name = "Diego Vidaurre", email = "dvidaurre@cfin.au.dk"}]
dynamic = ["version", "description", "classifiers"]
dependencies = [
    "hmmlearn==0.3.0",
    "matplotlib==3.7.0",
    "numba==0.56.4",
    "numpy==1.23.5",
    "scikit-learn==1.2.1",
    "scipy==1.10.1",
    "seaborn==0.12.2",
]

[project.optional-dependencies]
doc = [
    "sphinx~=4.2.0",
    "myst_parser",
    "furo",
    "nbsphinx",
]
