[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[project]
name = "glhmm"
authors = [{name = "Diego Vidaurre", email = "dvidaurre@cfin.au.dk"}]
dynamic = ["version", "description","classifiers","dependencies"]

[project.optional-dependencies]
doc = [
    "sphinx>=5.0",
    "myst_parser",
    "furo",
    "nbsphinx",
    "pypandoc",
    "pandoc==2.14.2"
]

[tool.nbsphinx]
nbsphinx_kernel_name = "python3.10"
